# qa-playwright-pytest

./: .gitignore  README.md  config.py  conftest.py  metrics.py  pyproject.toml  qa_logging.py
.github/workflows/: ci.yml
pages/: base_page.py  todo_page.py
tests/: test_todo.py
