[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "qa-playwright-pytest"
version = "0.1.0"
description = "Small Playwright + pytest UI automation suite"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "QA Automation Team"}]
dependencies = [
  "playwright>=1.41.0",
  "pytest>=7.4.0",
  "pytest-html>=4.1.0",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pages"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = [
  "smoke: critical path UI tests",
  "regression: broader functional UI coverage",
]

